--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,57 @@
+/* //General// */
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: Lato, serif;
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+h2 {
+    margin-bottom: 2em;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+p {
+    margin: 0 0 1em;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    width: 100%;
+}
+
+button {
+    cursor: pointer;
+}
+
+/* Components */
+
+.canvas-container {
+    padding: 15px;
+    background-color: rgb(68, 67, 67);
+    width: fit-content;
+}
+
+canvas {
+    background-color: gray;
+}
+
+.gallery-container {
+    display: none;
 }
