--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,14 @@
 }
 
 body {
+    font-family: monospace;
+    color: rgb(211, 205, 205);
     margin: 0;
-    background-color: rgb(218, 236, 190);
+    background-color: #22252c;
 }
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
-}
-
-h2 {
-    margin-bottom: 2em;
 }
 
 a {
@@ -42,13 +40,63 @@ button {
 
 /* Components */
 
+/* Header */
+
+.nav-container {
+    background-color: rgb(230, 214, 75);
+    color: rgb(53, 53, 53);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 90px;
+    border-radius: 37px;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-btn {
+    padding: 15px 20px;
+    cursor: pointer;
+}
+
+.nav-btn:hover {
+    text-decoration: underline;
+    transform: scale(1.25);
+    font-weight: bolder;
+}
+
+.nav-btn:last-child {
+    padding-right: 0;
+}
+
+.logo {
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+
 /* Canvas Section */
 
 .canvas-section {
     padding-top: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    gap: 40px;
+    margin-right: auto;
+    margin-left: auto;
+    /* display: none; */
 }
 
 .canvas-container {
@@ -63,6 +111,7 @@ canvas {
 
 .btns-container {
     display: grid;
+    
 }
 
 .btns-container .font-size {
@@ -77,10 +126,52 @@ canvas {
     padding: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    /* display: none; */
+    gap: 15px;
+    justify-content: center;
+    display: none;
+
+    height: 100%;
+    margin-bottom: 50px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .gallery-container img {
     cursor: pointer;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery-item {
+    max-height: 350px;
+    max-width: 350px;
+}
+
+/* Footer */
+
+footer {
+    /* position: fixed; */
+    /* bottom: 0; */
+    /* width: 100%; */
+    height: 70px;
+    background-color: rgb(230, 214, 75);
+    color: rgb(53, 53, 53);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-logo {
+    margin-inline-end: 50px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.25rem;
+}
+
+
+/* Helpers */
+
+.container {
+    width: 800px;
 }
