--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ button {
     gap: 40px;
     margin-right: auto;
     margin-left: auto;
-    /* display: none; */
+    display: none;
 }
 
 .canvas-container {
@@ -111,13 +111,102 @@ canvas {
 
 .btns-container {
     display: grid;
-    
+    border-radius: 30px;
+    background-color:rgb(68, 67, 67);
+    padding: 20px;
+    justify-items: center;
+}
+
+.btns-container form {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 20px;
 }
 
 .btns-container .font-size {
     padding: 3px;
     text-align: center;
-    width: 70px;
+    /* width: 70px; */
+}
+
+.form-btn {
+    border-radius: 10px;
+    background-image: linear-gradient(-38deg, #42eb5c 0%, #37b34a 100%);
+    background-color: #ebeef3;
+    box-shadow: 1px 5px 0 #015d33, inset 0 5px 0 rgba(255, 255, 255, 0.58);
+    height: 50px;
+    width: 50px;
+    color: snow;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 1.25rem;
+}
+
+.form-btn .arrow-up {
+    width: 50%;
+    height: 50%;
+}
+
+.form-btn .arrow-down {
+    transform: rotate(180deg);
+    width: 50%;
+    height: 50%;
+}
+
+.form-btn .arrow-up-text {
+    width: 90%;
+    height: 90%;
+}
+
+.form-btn .arrow-down-text {
+    transform: rotate(180deg);
+    width: 90%;
+    height: 90%;
+}
+
+
+.text-input {
+    text-align: center;
+    padding: 7px 10px;
+    border-radius: 28px;
+    background-color: #ebeef3;
+    grid-column: 1 / 7;
+    grid-row: 1 / 2;
+}
+
+.text-input-btn {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+}
+
+.switch-line-btn {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+
+.font-size-up {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    background-image: linear-gradient(-38deg, #e3e614 0%, #d4d135 100%);
+}
+
+.font-size-down {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+    background-image: linear-gradient(-38deg, #e62d14 0%, #c93522 100%);
+}
+
+.move-meme-up {
+    grid-column: 3 / 4;
+    grid-row: 5 / 6;
+    background-image: linear-gradient(-38deg, #1422e6 0%, #358cd4 100%);
+}
+
+.move-meme-down {
+    grid-column: 4 / 5;
+    grid-row: 5 / 6;
+    background-image: linear-gradient(-38deg, #1422e6 0%, #358cd4 100%);
 }
 
 /* Img Gallery */
@@ -128,7 +217,7 @@ canvas {
     grid-template-columns: 1fr 1fr;
     gap: 15px;
     justify-content: center;
-    display: none;
+    /* display: none; */
 
     height: 100%;
     margin-bottom: 50px;
@@ -147,6 +236,8 @@ canvas {
     max-height: 350px;
     max-width: 350px;
 }
+
+
 
 /* Footer */
 
@@ -173,5 +264,13 @@ footer {
 /* Helpers */
 
 .container {
-    width: 800px;
+    width: 900px;
+}
+
+.display-grid {
+    display: grid !important;
+}
+
+.display-none {
+    display: none !important;
 }
