--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,15 @@ body {
     color: rgb(211, 205, 205);
     margin: 0;
     background-color: #22252c;
+    /* min-height: 100%; */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
@@ -119,7 +125,7 @@ canvas {
 .btns-container {
     display: grid;
     border-radius: 30px;
-    background-color:rgb(68, 67, 67);
+    background-color: rgb(68, 67, 67);
     padding: 20px;
     justify-items: center;
     border: 2.5px solid #dadada;
@@ -249,14 +255,12 @@ canvas {
     max-width: 350px;
 }
 
-
-
 /* Footer */
 
 footer {
-    /* position: fixed; */
-    /* bottom: 0; */
-    /* width: 100%; */
+    /* position: fixed;
+    bottom: 0;
+    width: 100%; */
     height: 70px;
     background-color: rgb(230, 214, 75);
     color: rgb(53, 53, 53);
@@ -304,7 +308,7 @@ footer {
         width: 350px;
         height: 350px;
         padding: 0;
-}
+    }
 
 }
 
