--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ canvas {
     border-radius: 10px;
     background-image: linear-gradient(-38deg, #42eb5c 0%, #37b34a 100%);
     background-color: #ebeef3;
-    box-shadow: 1px 5px 0 #015d33, inset 0 5px 0 rgba(255, 255, 255, 0.58);
+    box-shadow: 1px 2px 0 #808683, inset 0 5px 0 rgba(255, 255, 255, 0.58);
     height: 50px;
     width: 50px;
     color: snow;
@@ -177,12 +177,11 @@ canvas {
     height: 90%;
 }
 
-.form-btn .arrow-down-text {
+.form-btn .arrow-text-down {
     transform: rotate(180deg);
     width: 90%;
     height: 90%;
 }
-
 
 .text-input {
     text-align: center;
@@ -203,16 +202,62 @@ canvas {
     grid-row: 2 / 3;
 }
 
+.btns-sub-container {
+    background-color: rgb(230, 214, 75);
+    border-radius: 10px;
+    grid-column: 1 / 7;
+    grid-row: 3 / 5;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 10px;
+    row-gap: 15px;
+    padding: 20px;
+    justify-content: center;
+}
+
 .font-size-up {
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     background-image: linear-gradient(-38deg, #e3e614 0%, #d4d135 100%);
 }
 
 .font-size-down {
-    grid-column: 4 / 5;
-    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     background-image: linear-gradient(-38deg, #e62d14 0%, #c93522 100%);
+}
+
+.align-left {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+
+.align-center {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+}
+
+.align-right {
+    grid-column: 5 / 6;
+    grid-row: 1 / 2;
+}
+
+.font-family {
+    text-transform: uppercase;
+    padding: 7px;
+    text-align: center;
+    background-image: linear-gradient(-38deg, #9c9da5 0%, #d5d7da 100%);
+    border-radius: 10px;
+    box-shadow: 1px 2px 0 #808683, inset 0 5px 0 rgba(255, 255, 255, 0.58);
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+}
+
+.color-set {
+    background-image: linear-gradient(-38deg, #abacb3 0%, #3d8ec4 100%);
+    grid-column: 5 / 6;
+    grid-row: 2 / 3;
 }
 
 .move-meme-up {
@@ -225,6 +270,11 @@ canvas {
     grid-column: 4 / 5;
     grid-row: 5 / 6;
     background-image: linear-gradient(-38deg, #1422e6 0%, #358cd4 100%);
+}
+
+.form-btn svg {
+    max-width: 90%;
+    height: auto;
 }
 
 /* Img Gallery */
@@ -310,6 +360,61 @@ footer {
         padding: 0;
     }
 
+    .btns-sub-container {
+        grid-column: 1 / 7;
+        grid-row: 3 / 6;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        column-gap: 10px;
+        row-gap: 15px;
+        padding: 20px;
+        justify-content: center;
+    }
+
+    .font-size-up {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .font-size-down {
+        grid-column: 4 / 5;
+        grid-row: 1 / 2;
+        background-image: linear-gradient(-38deg, #e62d14 0%, #c93522 100%);
+    }
+
+    .align-left {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    .align-center {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+
+    .align-right {
+        grid-column: 4 / 5;
+        grid-row: 2 / 3;
+    }
+
+    .font-family {
+        grid-column: 1 / 4;
+        grid-row: 3 / 4;
+    }
+
+    .color-set {
+        grid-column: 4 / 5;
+        grid-row: 3 / 4;
+    }
+
+    .move-meme-up {
+        grid-row: 6 / 7;
+    }
+
+    .move-meme-down {
+        grid-row: 6 / 7;
+    }
+
 }
 
 @media screen and (max-width: 500px) {
@@ -323,8 +428,8 @@ footer {
 
     .canvas-section {
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 10px;
+        grid-template-rows: 0.7fr 0.5fr;
+        gap: 0px;
         justify-items: center;
     }
 
@@ -336,6 +441,67 @@ footer {
 
     canvas {
         border-radius: 10px;
+    }
+
+    .form-btn {
+        height: 55px;
+        width: 55px;
+        /* font-size: 1.25rem; */
+    }
+
+    .btns-sub-container {
+        grid-column: 1 / 7;
+        grid-row: 3 / 5;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        column-gap: 10px;
+        row-gap: 15px;
+        padding: 20px;
+    }
+
+    .font-size-up {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .font-size-down {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .align-left {
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
+
+    .align-center {
+        grid-column: 4 / 5;
+        grid-row: 1 / 2;
+    }
+
+    .align-right {
+        grid-column: 5 / 6;
+        grid-row: 1 / 2;
+    }
+
+    .font-family {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+    }
+
+    .color-set {
+        grid-column: 5 / 6;
+        grid-row: 2 / 3;
+    }
+
+    .move-meme-up {
+        grid-column: 3 / 4;
+        grid-row: 5 / 6;
+    }
+
+    .move-meme-down {
+        grid-column: 4 / 5;
+        grid-row: 5 / 6;
     }
 
     footer {
