--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,10 @@ canvas {
 /* Img Gallery */
 
 .gallery-container {
-    padding: 10px;
+    border-radius: 10px;
+    background-color: #444343;
+    margin-top: 20px;
+    padding: 40px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 15px;
@@ -321,6 +324,7 @@ canvas {
 }
 
 .gallery-container img {
+    border-radius: 10px;
     cursor: pointer;
     width: 100%;
     height: 100%;
@@ -445,6 +449,12 @@ footer {
         grid-row: 6 / 7;
     }
 
+    .download-btn {
+        padding: 10px;
+        width: fit-content;
+        grid-row: unset;
+    }
+
 }
 
 @media screen and (max-width: 500px) {
@@ -525,7 +535,7 @@ footer {
     }
 
     .move-meme-up {
-        grid-column: 2 / 3;
+        grid-column: 3 / 4;
         grid-row: 5 / 6;
     }
     
@@ -537,12 +547,17 @@ footer {
     .download-btn {
         padding: 10px;
         width: fit-content;
+        grid-row: 6 / 7;
     }
 
     footer {
         position: unset;
         bottom: unset;
         width: unset;
+    }
+
+    .gallery-container {
+        grid-template-columns: 1fr 1fr;
     }
 
 }
