--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,16 @@ canvas {
     text-shadow: -2px 3px 2px rgba(150, 150, 150, 0.7);
 }
 
+.facebook-btn {
+    padding: 10px;
+    width: fit-content;
+    grid-column: 4 / 6;
+    grid-row: 6 / 7;
+    /* background-image: linear-gradient(-38deg, #aaaaaa 0%, #a4a7a7 100%); */
+    background-color: rgb(25, 0, 255);
+    text-shadow: -2px 3px 2px rgba(150, 150, 150, 0.7);
+}
+
 .download-btn a {
     color: snow;
 }
@@ -464,8 +474,16 @@ footer {
     }
 
     .download-btn {
-        padding: 10px;
+        padding: 7px;
+        font-size: 1rem;
         width: fit-content;
+        grid-row: unset;
+    }
+    .facebook-btn {
+        padding: 7px;
+        font-size: 1rem;
+        width: fit-content;
+        grid-column: 4 / 5;
         grid-row: unset;
     }
 }
@@ -548,6 +566,12 @@ footer {
     }
 
     .download-btn {
+        padding: 10px;
+        width: fit-content;
+        grid-row: 6 / 7;
+    }
+
+    .facebook-btn {
         padding: 10px;
         width: fit-content;
         grid-row: 6 / 7;
