--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
 
-
 /* //General// */
 
 * {
@@ -12,15 +11,9 @@ body {
     color: rgb(211, 205, 205);
     margin: 0;
     background-color: #22252c;
-    /* min-height: 100%; */
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
@@ -103,13 +96,11 @@ button {
     cursor: pointer;
 }
 
-
 /* Canvas Section */
 
 .canvas-section {
     padding-top: 20px;
     padding-bottom: 20px;
-    /* display: grid; */
     grid-template-columns: 1fr 1fr;
     gap: 40px;
     margin-right: auto;
@@ -125,8 +116,8 @@ button {
     border: 2.5px solid #dadada;
     border-radius: 7px;
     outline: none;
-    border-color: #9ecaed;
-    box-shadow: 0 0 10px #9ecaed;
+    border-color: #dbe643;
+    box-shadow: 0 0 10px #f5dc4d;
 }
 
 canvas {
@@ -142,8 +133,8 @@ canvas {
     border: 2.5px solid #dadada;
     border-radius: 7px;
     outline: none;
-    border-color: #9ecaed;
-    box-shadow: 0 0 10px #9ecaed;
+    border-color: #dbe643;
+    box-shadow: 0 0 10px #f5dc4d;
 }
 
 .btns-form {
@@ -156,7 +147,6 @@ canvas {
 .btns-container .font-size {
     padding: 3px;
     text-align: center;
-    /* width: 70px; */
 }
 
 .form-btn {
@@ -301,7 +291,6 @@ canvas {
     width: fit-content;
     grid-column: 2 / 5;
     grid-row: 6 / 7;
-    /* background-image: linear-gradient(-38deg, #aaaaaa 0%, #a4a7a7 100%); */
     background-color: red;
     text-shadow: -2px 3px 2px rgba(150, 150, 150, 0.7);
 }
@@ -309,9 +298,6 @@ canvas {
 .facebook-btn {
     padding: 10px;
     width: fit-content;
-    /* grid-column: 4 / 6;
-    grid-row: 6 / 7; */
-    /* background-image: linear-gradient(-38deg, #aaaaaa 0%, #a4a7a7 100%); */
     background-color: rgb(25, 0, 255);
     text-shadow: -2px 3px 2px rgba(150, 150, 150, 0.7);
 }
@@ -360,8 +346,8 @@ canvas {
     background-color: rgb(219, 215, 215);
     border: 2.5px solid #dadada;
     outline: none;
-    border-color: #9ecaed;
-    box-shadow: 0 0 10px #9ecaed;
+    border-color: #dbe643;
+    box-shadow: 0 0 10px #f5dc4d;
 }
 
 .search-container input::-webkit-input-placeholder {
@@ -388,8 +374,6 @@ canvas {
     justify-content: center;
     height: 100%;
     padding: 20px;
-    /* margin-right: auto;
-    margin-left: auto; */
 }
 
 .gallery-container img {
@@ -408,18 +392,12 @@ canvas {
 /* Footer */
 
 footer {
-    /* position: fixed;
-    bottom: 0;
-    width: 100%; */
     height: 70px;
     background-color: rgb(230, 214, 75);
     color: rgb(53, 53, 53);
     display: flex;
     justify-content: center;
     align-items: center;
-    /* position: absolute;
-    bottom: 0;
-    width: 100%; */
 }
 
 .footer-logo {
@@ -570,7 +548,6 @@ footer {
     .form-btn {
         height: 55px;
         width: 55px;
-        /* font-size: 1.25rem; */
     }
 
     .btns-sub-container {
